Basic folder -> folder -> dataset -> folder -> ... navigation implemented
