# taiga2/swagger/swagger.yaml
@@ -310,7 +310,7 @@ paths:
           description: Folder ID
           required: true
         - in: body
-          name: dataset
+          name: DatasetUpdate
           schema:
             type: object
             properties:
@@ -397,9 +397,14 @@ paths:
               - creator
               - datafiles
               - version
+              - folders
             properties:
               id:
                 type: string
+              folders:
+                type: array
+                items:
+                  "$ref": "#/definitions/NamedId"
               dataset_id:
                 type: string
               status:
@@ -519,41 +524,3 @@ definitions:
       - deleted    # Underlying data has been deleted
       - valid
 
-  ProvenanceStmt:
-    type: object
-    properties:
-      inputs: 
-        type: array
-        items:
-          type: object
-          properties:
-            label: 
-              description: A short label describing how the file was used.   Should be thought of as a parameter name for the method.
-              type: string
-            url:
-              description: Can specify an external reference for any files which are not registered within the system.  Either url or fileId should be populated, but not both.
-              type: string
-            fileId:
-              description: a file id that was used as input to the method
-              type: string
-      outputs:
-        type: array
-        items:
-          type: object
-          properties:
-            dataset_id:
-              description: The dataset(s) that were derived from the input files
-              type: string
-      method:
-        type: object
-        properties:
-          name:
-            description: Short name describing the process that was executed
-            type: string
-          description:
-            description: Long form description of the process that was executed
-            type: string
-          properties:
-            description: Any parameters other than input files that should be recorded
-            type: object
-  
